# cish

./: .gitignore  CMakeLists.txt  README.md
cli/: CMakeLists.txt
cli/src/: main.cpp
doc/: structs.md
gcc_compare/: 100_doors.c  5k_quicksort.c  addrof_deref.c  addrof_precedence.c  addrof_subscript.c  args_argc.c  args_argv.c  arithmetic_assignment.c  array_func.c  atof.c  atoi.c  bitwise.c  bool_logic.c  compare.sh  double_negate.c  dowhileloop.c  fgetc.c  fgets.c  fibsum.c  fopen.c  hello_world_multiline.c  implicit_param_conversion.c  int_to_binary.c  logical_and.c  many_struct_params.c  memchr.c  memcpy_cmp.c  memset.c  negative_ambiguity.c  negative_bool.c  quicksort.c  ret_struct.c  str_array.c  str_from_func.c  str_literal_compare.c  str_sum.c  strcat.c  strchr.c  strcmp.c  strcpy.c  (+16 more)
grammar/: CM.g4  c99.g4  treeview.sh
grammar/samples/: arithassign.c  deref.c  derefx3.c  expression.c  helloworld.c  loopy.c  parens.c  pe1.c  pe1_x1000.c  pointers.c  simple.c  sizeof.c  strings.c  while.c
src/: Exception.cpp  Exception.h  HelloWorld.cpp  HelloWorld.h
src/ast/: AddrofExpression.cpp  AddrofExpression.h  AntlrContext.cpp  AntlrContext.h  ArithmeticAssignmentStatement.cpp  ArithmeticAssignmentStatement.h  Ast.cpp  Ast.h  AstBuilder.cpp  AstBuilder.h  AstNodes.cpp  AstNodes.h  BinaryExpression.cpp  BinaryExpression.h  DeclarationContext.cpp  DeclarationContext.h  DerefExpression.cpp  DerefExpression.h  ElseStatement.cpp  ElseStatement.h  ExpressionStatement.cpp  ExpressionStatement.h  ExpressionValue.cpp  ExpressionValue.h  ForLoopStatement.cpp  ForLoopStatement.h  FuncDeclaration.h  FunctionCallExpression.cpp  FunctionCallExpression.h  FunctionCallStatement.cpp  FunctionCallStatement.h  FunctionDeclarationStatement.cpp  FunctionDeclarationStatement.h  FunctionDefinition.cpp  FunctionDefinition.h  IfStatement.cpp  IfStatement.h  IncDecExpression.cpp  IncDecExpression.h  LineNumberResolver.cpp  (+52 more)
src/module/: Function.cpp  Function.h  Module.cpp  Module.h  ModuleContext.cpp  ModuleContext.h  Utils.cpp  Utils.h
src/module/stdio/: FopenContext.cpp  FopenContext.h  stdioModule.cpp  stdioModule.h
src/module/stdlib/: MallocContext.cpp  MallocContext.h  stdlibModule.cpp  stdlibModule.h
src/module/string/: stringModule.cpp  stringModule.h
src/vm/: Allocation.cpp  Allocation.h  AllocationUnit.cpp  AllocationUnit.h  Allocator.cpp  Allocator.h  Callable.h  ExecutionContext.cpp  ExecutionContext.h  ExecutionThread.cpp  ExecutionThread.h  Executor.cpp  Executor.h  IStream.h  Memory.cpp  Memory.h  Scope.cpp  Scope.h  StackFrame.cpp  StackFrame.h  StdoutStream.cpp  StdoutStream.h  Variable.cpp  Variable.h  VirtualMachine.cpp  VirtualMachine.h
test/: CMakeLists.txt
test/src/: TestHelpers.cpp  TestHelpers.h  dummy.cpp
test/src/ast/: AddrofExpressionTest.cpp  AntlrContextTest.cpp  ArithmeticAssignmentTest.cpp  AstBuilderTest.cpp  BinaryExpressionTest.cpp  DeclarationContextTest.cpp  DerefExpressionTest.cpp  ExpressionValueTest.cpp  FunctionCallExpressionTest.cpp  FunctionDeclarationStatementTest.cpp  FunctionDefinition.cpp  FunctionDefinitionTest.cpp  IfStatementTest.cpp  IncDecExpressionTest.cpp  LineNumberResolverTest.cpp  NegationExpressionTest.cpp  OnesComplimentExpressionTest.cpp  StringEscapeTest.cpp  StringTable.cpp  StructAccessExpressionTest.cpp  StructLayoutTest.cpp  SubscriptExpressionTest.cpp  SuperStatementTest.cpp  TypeTest.cpp  VariableAssignmentStatementTest.cpp  VariableDeclarationStatementTest.cpp  VariableReferenceExpressionTest.cpp
test/src/programs/: ModuleTest.cpp  SimpleProgramsTest.cpp  StructProgramsTest.cpp  stringModuleTest.cpp
test/src/vm/: AllocationTest.cpp  AllocatorTest.cpp  ExecutionContextTest.cpp  ExecutionThreadTest.cpp  MemoryTest.cpp  ScopeTests.cpp  StackFrameTest.cpp  VariableTest.cpp  VirtualMachineTest.cpp
